<resources>
    <string name="app_name">CakeDog</string>
    <string name="login">E-mail</string>
    <string name="pw">Senha</string>
    <string name="btn_enter">Entrar</string>
    <string name="btn_create_account">Criar conta</string>
    <string name="title_reg">Crie uma conta</string>
    <string name="txt_name">Nome completo</string>
    <string name="txt_name_">Nome completo:</string>
    <string name="txt_cpf">CPF</string>
    <string name="txt_cpf_">CPF:</string>
    <string name="txt_fone">Telefone</string>
    <string name="txt_fone_">Telefone:</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_email_">E-mail:</string>
    <string name="txt_pw">Senha</string>
    <string name="txt_pw_">Senha:</string>
    <string name="txt_end">Endereço</string>
    <string name="txt_end_">Endereço:</string>
    <string name="txt_bairro">Bairro</string>
    <string name="txt_bairro_">Bairro:</string>
    <string name="txt_cep">CEP</string>
    <string name="txt_cep_">CEP:</string>
    <string name="txt_city">Cidade</string>
    <string name="txt_city_">Cidade:</string>
    <string name="txt_uf">UF</string>
    <string name="txt_uf_">UF:</string>
    <string name="btn_save">Criar conta</string>
    <string name="btn_simples">Simples</string>
    <string name="btn_pers">Personalizados</string>
    <string name="btn_tisco">CakeTiscos</string>
    <string name="btn_espec">Especiais</string>
    <string name="txt_title_simple">Escolha o sabor do bolo</string>
    <string name="txt_title_simple_">Escolha o sabor do bolo:</string>
    <string name="txt_choose_form">Escolha a forma do bolo:</string>
    <string name="txt_choose_color">Escolha a cor da cobertura do bolo:</string>
    <string name="txt_choose_photo">Escolha uma foto de raça:</string>
    <string name="txt_title_pers">Personalize seu bolo</string>
    <string name="txt_title_tiskos">Escolha a quantidade de CakeTiskos</string>
    <string name="btn_show_prod">Adicionar ao carrinho</string>
    <string name="btn_cart">Carrinho</string>
    <string name="btn_plus">+</string>
    <string name="txt_quantity">1</string>
    <string name="btn_minus">-</string>
    <string name="txt_pay">Pagamento</string>
    <string name="title_deliv">Escolha o endereço para entrega</string>
    <string name="deliv_instr">Entregar no endereço:</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="btn_continue">Continuar</string>
    <string name="btn_add_card">Adicionar novo cartão</string>
    <string name="spn_uf">Selecione o UF</string>
    <string name="txt_street">Rua Padrão</string>
    <string name="txt_neighborhood">Bairro Padrão</string>
    <string name="txt_items">Itens:</string>
    <string name="txt_description">Descrição do produto</string>
    <string name="txt_product_value">R$ Valor do produto</string>
    <string name="txt_total">Total com entrega</string>
    <string name="txt_total_value">0,00</string>
    <string name="txt_subtotal_title">Subtotal</string>
    <string name="txt_subtotal">0,00</string>
    <string name="txt_deliver_title">Taxa de entrega</string>
    <string name="txt_deliver_price">0,00</string>
    <string name="btn_birth_date">Data de nascimento</string>
    <string name="btn_birth_date_">Data de nascimento:</string>
    <string name="btn_uf">Selecione o UF</string>
    <string name="btn_uf_">Selecione o UF:</string>
    <string name="user">Usuário</string>
    <string name="debit_card">Cartão de Débito</string>
    <string name="credit_card">Cartão de Crédito</string>
    <string name="cash">Dinheiro</string>
    <string name="pix">Pix</string>
    <string name="slogan">Encomenda de bolos para seu cão</string>
    <string name="txt_app_payment">Pagamento pelo app:</string>
    <string name="txt_deliver_payment">Pagamento na entrega:</string>
    <string name="btn_buy_more">Comprar mais</string>
    <string name="btn_change">trocar</string>
    <string name="txt_number_card">Nº do cartão</string>
    <string name="txt_value_resume">Resumo de valores</string>
    <string name="txt_real_sign">R$</string>
    <string name="txt_plus_real">+ R$</string>
    <string name="btn_end_shop">Finalizar compra</string>
    <string name="btn_alter_address">Alterar endereço</string>
    <string name="btn_confirm_address">Confirmar endereço</string>
    <string name="txt_chicken">Frango</string>
    <string name="txt_meat">Carne Bovina</string>
    <string name="txt_salmon">Salmão</string>
    <string name="txt_veggies">Vegetais</string>
    <string name="txt_fruits">Frutas</string>
    <string name="txt_bone">Osso</string>
    <string name="txt_square">Quadrado</string>
    <string name="txt_round">Redondo</string>
    <string name="txt_dog">Cachorro</string>
    <string name="txt_blue">Azul</string>
    <string name="txt_pink">Rosa</string>
    <string name="txt_red">Vermelho</string>
    <string name="txt_yellow">Amarelo</string>
    <string name="txt_tiskos10">Pacote de Caketiskos 10 und</string>
    <string name="txt_tiskos10_desc">Um pacote de petiscos para seu cão com 10 unidades cada.</string>
    <string name="txt_tiskos10_valor">20,00</string>
    <string name="txt_tiskos20">Pacote de Caketiskos 20 und</string>
    <string name="txt_tiskos20_desc">Um pacote de petiscos para seu cão com 20 unidades cada.</string>
    <string name="txt_tiskos20_valor">35,00</string>
    <string name="txt_tiskos30">Pacote de Caketiskos 30 und</string>
    <string name="txt_tiskos30_desc">Um pacote de petiscos para seu cão com 30 unidades cada.</string>
    <string name="txt_tiskos30_valor">50,00</string>
    <string name="txt_hello">Olá, Usuário</string>
    <string name="txt_email_user">example@gmail.com</string>
    <string name="btn_delete_acc">Excluir conta</string>
    <string name="btn_exit">Sair</string>
    <string name="txt_whey">Bolo WheyProtein</string>
    <string name="txt_puppy">Bolo Puppy</string>
    <string name="txt_diet">Bolo Diet</string>
    <string name="txt_recipe">Ingredientes: Na massa, peito de frango, cenoura, azeite de oliva, ovos, farinha de arroz, farinha de aveia sem glúten. Na cobertura, cream cheese pet.</string>
    <string name="txt_observation">Observação:</string>
    <string name="txt_obs_hint">Deixe alguma observação</string>
</resources><!--
    Poodle, Lhasa, Golden, Labrador, Doberman, Buldogue, Pug, Rottveiler, Pastor-Alemão, Pitbull, Chow Chow ou Nenhum
    Azul, Rosa, Vermelho ou Amarelo
-->