<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_bege"
    tools:context=".UserPage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bege"
        android:minHeight="?attr/actionBarSize"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgIconDog"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_oficial"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="35dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/app_name"
            android:textColor="@color/dark_bordo"
            android:textSize="34sp"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="60dp"
            android:background="@drawable/prod_separator"
            android:layout_marginStart="10dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/slogan"
            android:textColor="@color/dark_bordo"
            android:textSize="14sp"
            />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtHelloUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="start"
        android:padding="10dp"
        android:text="@string/txt_hello"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar1"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtEmailUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="start"
        android:padding="10dp"
        android:text="@string/txt_email_user"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtHelloUser"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmailUser"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDeleteAccount"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_marginBottom="0dp"
            android:text="@string/btn_delete_acc"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:fontFamily="@font/quicksand_bold"
            android:background="@drawable/btn_round_corner"
            android:textSize="28sp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnExit"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="0dp"
            android:text="@string/btn_exit"
            android:textAllCaps="false"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:fontFamily="@font/quicksand_bold"
            android:background="@drawable/btn_round_corner"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>