<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_bege"
    tools:context=".LoginUser">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/logo_oficial"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center_horizontal"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginStart="10dp"
                android:text="@string/txt_email_"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:fontFamily="@font/quicksand_medium"
                />

            <EditText
                android:id="@+id/txtUser"
                android:layout_width="350dp"
                android:layout_height="60dp"
                app:layout_constraintTop_toBottomOf="@id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_email_icon"
                android:hint="@string/login"
                android:inputType="textEmailAddress"
                android:autofillHints="true"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:fontFamily="@font/quicksand_regular"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:text="@string/txt_pw_"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:fontFamily="@font/quicksand_medium"
                />

            <EditText
                android:id="@+id/txtPw"
                android:layout_width="350dp"
                android:layout_height="60dp"
                app:layout_constraintTop_toBottomOf="@id/txtUser"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:drawablePadding="12dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_lock_icon"
                android:hint="@string/pw"
                android:inputType="textPassword"
                android:autofillHints="false"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:fontFamily="@font/quicksand_regular"
                />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPw"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="100dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btnToRegister"
                    android:layout_width="280dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/btn_create_account"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:fontFamily="@font/quicksand_bold"
                    android:background="@drawable/btn_round_corner"
                    android:textSize="28sp"
                    />

                <Button
                    android:id="@+id/btnEnter"
                    android:layout_width="280dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/btn_enter"
                    android:textAllCaps="false"
                    android:textSize="28sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/quicksand_bold"
                    android:background="@drawable/btn_round_corner"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>