<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UsingOnClickInXml"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown_opaque"
    tools:context=".RegisterUser">

    <TextView
        android:id="@+id/title_reg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/title_reg"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/prod_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_reg"
        />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="8dp"
                android:text="@string/txt_name"
                android:textSize="22sp"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="true"
                android:background="@drawable/custom_input"
                android:hint="@string/txt_name"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="8dp"
                android:text="@string/txt_cpf"
                android:textSize="22sp"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/txtCPF"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="true"
                android:background="@drawable/custom_input"
                android:hint="@string/txt_cpf"
                android:inputType="number"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="8dp"
                android:text="@string/btn_birth_date"
                android:textSize="22sp"
                android:textColor="@color/black"
                />

            <Button
                android:id="@+id/btnBirthDate"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="28sp"
                android:textColor="@color/white"
                style="?android:spinnerStyle"
                android:onClick="openDatePicker"
                android:hint="@string/btn_birth_date"
                android:gravity="center_vertical"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="8dp"
                android:text="@string/txt_fone"
                android:textSize="22sp"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="true"
                android:background="@drawable/custom_input"
                android:hint="@string/txt_fone"
                android:inputType="phone"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="8dp"
                android:text="@string/txt_end"
                android:textSize="22sp"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/txtAddress"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="true"
                android:background="@drawable/custom_input"
                android:hint="@string/txt_end"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"
                android:text="@string/txt_bairro"
                android:textSize="22sp"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/txtNeighborhood"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="true"
                android:background="@drawable/custom_input"
                android:hint="@string/txt_bairro"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"
                android:text="@string/txt_cep"
                android:textSize="22sp"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/txtCEP"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="true"
                android:background="@drawable/custom_input"
                android:hint="@string/txt_cep"
                android:inputType="number"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"
                android:text="@string/txt_city"
                android:textSize="22sp"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/txtCity"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="true"
                android:background="@drawable/custom_input"
                android:hint="@string/txt_city"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"
                android:text="@string/btn_uf"
                android:textSize="22sp"
                android:textColor="@color/black"
                />

            <Button
                android:id="@+id/btnUF"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:textSize="28sp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/white"
                style="?android:spinnerStyle"
                android:onClick="openDatePicker"
                android:hint="@string/btn_uf"
                android:gravity="center_vertical"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="8dp"
                android:text="@string/txt_email"
                android:textSize="22sp"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="true"
                android:background="@drawable/custom_input"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="8dp"
                android:text="@string/txt_pw"
                android:textSize="22sp"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/txtPw"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:autofillHints="true"
                android:background="@drawable/custom_input"
                android:hint="@string/txt_pw"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="20sp"
                />



            <Button
                android:id="@+id/btnSave"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/btn_save"
                android:background="@drawable/btn_round_corner"
                android:onClick="doRegister"
                android:textAllCaps="false"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:fontFamily="@font/raleway_bold"
                />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>